add part "betrachtung auf Kiezebene"

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     
     <h2 class='subtitle'>Betrachtung auf Kiezebene</h2>
     <p>
-      text text text
+      Die untenstehenden Karten bieten eine räumliche Perspektive auf das Thema Grundsicherung. Die Empfänger*innen von Grundsicherung sind nicht gleichmäßig verteilt über die Stadt – einige Stadtgebiete in Berlin haben einen höheren Anteil an Grundsicherungsempfänger*innen als andere. Dementsprechend ist es für die Verwaltung und für Sozialhilfe-Initiativen wichtig zu verstehen, wo der Bedarf an Unterstützung besonders hoch ist. Dadurch können entsprechende Services, Angebote und soziale Infrastrukturen effektiv verteilt und geplant werden, wie beispielsweise Seniorenzentren mit kostenlosen Angeboten oder Zugang zu Lebensmittelspenden. 
+
     </p>
   </div>
 </div>
