--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </p>
     
     <div class="bullets-wrapper mb-2">
-      <span class="bullet">Menschen, die die Altersgrenze von xx Jahren erreicht haben (in 2019 ist diese Grenze 67 Jahre)</span>
+      <span class="bullet">Menschen, die die Altersgrenze von xxx Jahren erreicht haben (in 2019 ist diese Grenze 67 Jahre)</span>
       <span class="bullet">Menschen, die aus gesundheitlichen Gründen keine Erwerbstätigkeit ausüben können</span>
     </div>
     
