updated timelapse data

--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
           <span class="headline-03" id="content-title">Entwicklung von 2006 - 2018</span>
           <p style="margin-bottom: 10px;" class="headline-04" id="content-description">Empfänger*innen von
             Grundsicherung im Alter als Anteil (%) an der gesamten über 65-jährigen Bevölkerung auf Kiezebene
-            (sogenannte Planungsräume der LORs - Lebensweltlich orientierten Räume) dargestellt. Aus
-            Geheimhaltungsgründen werden zu kleine Werte gesperrt und sind als fehlend gekennzeichnet.<br><br>Über den
+            (sogenannte Planungsräume der LORs - Lebensweltlich orientierten Räume) dargestellt.<br><br>
+            Für einige Planungsräume wurden in den Jahren 2006, 2007 und 2008 kein Daten erhoben.
+            Diese LOR sidn entsprechend ausgegraut.<br><br>Über den
             Slider lassen sich die Daten für die Jahre 2006 bis 2018 anzeigen.</p>
         </div>
 
