add link to Altersgrenze table

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 2. die allgemeine Wartezeit erfüllt haben. Die Regelaltersgrenze wird frühestens mit Vollendung des 65.
                 Lebensjahres erreicht.<br><br>
                 Versicherte, die vor dem 1. Januar 1947 geboren sind, erreichen die Regelaltersgrenze mit Vollendung
-                des 65. Lebensjahres. Für Versicherte, die nach dem 31. Dezember 1946 geboren sind, wird dir Regelaltersgrenze wie folgt Versicherte, geboren angehoben: LINK ZU TABELLE
+                des 65. Lebensjahres. Für Versicherte, die nach dem 31. Dezember 1946 geboren sind, wird dir Regelaltersgrenze wie folgt Versicherte, geboren angehoben: <a href="https://www.bmas.de/DE/Themen/Soziale-Sicherung/Sozialhilfe/grundsicherung-im-alter-und-bei-erwerbsminderung.html;jsessionid=93C0FC12703D28C1778CE5C6853666D4#b1" target="blank">Link</a>
           </span></span> erreicht haben</span>
       <span class="bullet">Menschen, die aus anderen Gründen (wie eine Krankheit oder eine Behinderung) dauerhaft keine
         Erwerbstätigkeit von mindestens 3 Stunden täglich ausüben können</span>
