--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
 
         <div id="slider-wrapper slider-container">
-          <input class="slider" id="slider" type="range" value="2018" min="2006" max="2018" step="1" />
+          <input class="slider" id="slider" type="range" min="2006" max="2018" value="1" step="1" />
           <div id="year-label"></div>
         </div>
       </div>
