minor map menu changes

--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
           <p class="headline-04" id="content-description"></p>
         </div>
         <div id="navigation">
-          <ul id="main-navigation"></ul>
-          <ul id="sub-navigation"></ul>
+          <ul id="main-navigation">
+            <h2 style="font-size: 14px; font-weight: bold; margin-bottom: 20px;">Wähle Personengruppe und Art der Grundsicherung: </h2>
+          </ul>
+          <ul id="sub-navigation">
+          </ul>
         </div>
       </div>
 
@@ -155,7 +158,7 @@
             Grundsicherung im Alter als Anteil (%) an der gesamten über 65-jährigen Bevölkerung auf Kiezebene
             (sogenannte Planungsräume der LORs - Lebensweltlich orientierten Räume) dargestellt.<br><br>
             Für einige Planungsräume wurden in den Jahren 2006, 2007 und 2008 kein Daten erhoben.
-            Diese LOR sidn entsprechend ausgegraut.<br><br>Über den
+            Diese LOR sind entsprechend ausgegraut.<br><br>Über den
             Slider lassen sich die Daten für die Jahre 2006 bis 2018 anzeigen.</p>
         </div>
 
