--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="section pb-6 pt-6" id="intro">
-    <h1 id="title">Grundsicherung</h1>
+    <h1 id="title">Grundsicherung in Berlin: Ein Blick in die Daten</h1>
 
     <p class="headline-02" id="intro-text">
       Berlinweit gibt es ca. 84.000 Menschen die staatliche Unterstützung in Form der Grundsicherung bekommen, um ihre
