update infotext for maps

--- a/index.html
+++ b/index.html
@@ -204,7 +204,6 @@
     </p>
     <p class="headline-04">
       <br>
-      <br>
       Diese Analysen basieren auf dem Datensatz, <a class="cross-link"
         href="http://www.gsi-berlin.info/redirectA.asp?filename=TS1700199029201812.xls">“Empfänger/innen von
         Grundsicherung im Alter und bei Erwerbsminderung gemäß 4. Kapitel SGB XII in Berlin außerhalb von Einrichtungen
@@ -212,6 +211,15 @@
       vorherigen Jahre genutzt. Alle Datensätze sind im <a class="gsi-link" href="http://www.gsi-berlin.info"
         target="blank">GSI-Portal</a>, das von der Senatsverwaltung für Gesundheit, Pflege und Gleichstellung
       bereitgestellt wird, zu finden.
+      <br>
+    </p>
+    <p class="headline-04">
+      <br>
+      Wenn Sie Fragen zu den Daten haben, bitte wenden Sie sich an <a href="mailto:XXX@SenIAS.berlin.de">XXX@SenIAS.berlin.de</a>.
+      <br>
+      <br>
+      Der Quellcode der Visualsierung ist <a href="https://github.com/technologiestiftung/grundsicherung" target="blank">auf GitHub verfügbar.</a>
+      Wenn Sie Fragen zu dieser Seite  den Visualisierungen haben, bitte wenden Sie sich an <a href="mailto:odis@technologiestiftung-berlin.de">odis@technologiestiftung-berlin.de</a>.
       <br>
       <br>
     </p>
