add note about percents

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
       Anteil an Grundsicherungsempfänger*innen als andere. Dementsprechend wichtig ist es für die Verwaltung und für
       Sozialhilfe-Initiativen zu wissen, wo der Bedarf an Unterstützung besonders erforderlich ist. Dadurch können
       entsprechende Services und Angebote effektiv verteilt und soziale Infrastrukturen besser geplant werden, wie
-      beispielsweise Seniorenzentren mit kostenlosen Angeboten oder Zugang zu Lebensmittelspenden. </p>
+      beispielsweise Seniorenzentren mit kostenlosen Angeboten oder Zugang zu Lebensmittelspenden.
+    <br>
+    <br>
+    Bei der Betrachtung der Karte muss beachtet werden, dass es sich bei den angezeigten Werten um Prozentangaben handelt. Ein hoher Prozentsatz an grundsicherungsbeziehenden Personen in einem Gebiet bedeutet nicht zwangsläufig, dass auch eine vergleichsweise hohe absolute Anzahl an Empfänger*innen in diesem Gebiet ansässig sind. Dieser Hinweis gilt insbesondere für zu großen Teilen industriell genutzte oder bewaldete Gebiete (wie beispielsweise Westhafen oder Tegeler Forst).
+    </p>
   </div>
 
   <div class="map-content grey-bg pb-6" id="map-wrapper">
@@ -218,7 +222,7 @@
       Wenn Sie Fragen zu den Daten haben, bitte wenden Sie sich an <a href="mailto:XXX@SenIAS.berlin.de">XXX@SenIAS.berlin.de</a>.
       <br>
       <br>
-      Der Quellcode der Visualsierung ist <a href="https://github.com/technologiestiftung/grundsicherung" target="blank">auf GitHub verfügbar.</a>
+      Der Quellcode der Visualisierung ist <a href="https://github.com/technologiestiftung/grundsicherung" target="blank">auf GitHub verfügbar.</a>
       Wenn Sie Fragen zu dieser Seite  den Visualisierungen haben, bitte wenden Sie sich an <a href="mailto:odis@technologiestiftung-berlin.de">odis@technologiestiftung-berlin.de</a>.
       <br>
       <br>
