--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </p>
     <p class="headline-04">
       <br>
-      Wenn Sie Fragen zu den Daten haben, bitte wenden Sie sich an <a href="mailto:XXX@SenIAS.berlin.de">XXX@SenIAS.berlin.de</a>.
+      Wenn Sie Fragen zu den Daten haben, bitte wenden Sie sich an <a href="mailto:juergen.greiner@SenIAS.berlin.de">Juergen.Greiner@SenIAS.berlin.de</a>.
       <br>
       <br>
       Der Quellcode der Visualisierung ist <a href="https://github.com/technologiestiftung/grundsicherung" target="blank">auf GitHub verfügbar.</a>
