--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
       <span class="bullet">Menschen, die die <span class="text-hover">Regelaltersgrenze <span
             class="questionmark">?</span>
           <span class="tooltiptext">
-                Vor dem 1. Januar 1964, haben Anspruch auf Regelaltersrente, wenn sie<br>
-                1. die Regelaltersgrenze erreicht haben<br>
-                2. die allgemeine Wartezeit erfüllt haben. Die Regelaltersgrenze wird frühestens mit Vollendung des 65.
-                Lebensjahres erreicht.<br><br>
-                Versicherte, die vor dem 1. Januar 1947 geboren sind, erreichen die Regelaltersgrenze mit Vollendung
-                des 65. Lebensjahres. Für Versicherte, die nach dem 31. Dezember 1946 geboren sind, wird dir Regelaltersgrenze wie folgt Versicherte, geboren angehoben: <a style="color:white;" href="https://www.bmas.de/DE/Themen/Soziale-Sicherung/Sozialhilfe/grundsicherung-im-alter-und-bei-erwerbsminderung.html;jsessionid=93C0FC12703D28C1778CE5C6853666D4#b1" target="blank">Link</a>
+            Leistungsberechtigt wegen Alters ist, wer die Altersgrenze erreicht hat. Personen, die vor dem 1. Januar 1947 geboren sind, erreichen die Altersgrenze mit Vollendung des 65. Lebensjahres. Für Personen, die nach dem 31. Dezember 1946 geboren sind, wird die Altersgrenze angehoben. <a style="color:white;" href="https://www.bmas.de/DE/Themen/Soziale-Sicherung/Sozialhilfe/grundsicherung-im-alter-und-bei-erwerbsminderung.html;jsessionid=93C0FC12703D28C1778CE5C6853666D4#b1" target="blank">Weitere Informationen.</a>
           </span></span> erreicht haben</span>
       <span class="bullet">Menschen, die aus anderen Gründen (wie eine Krankheit oder eine Behinderung) dauerhaft keine
         Erwerbstätigkeit von mindestens 3 Stunden täglich ausüben können</span>
@@ -50,12 +45,11 @@
             class="questionmark">?</span>
           <span class="tooltiptext">
             Wer sich nur kurzfristig auf Besuch oder zum Urlaub in Deutschland aufhält, hat keinen Anspruch auf
-            Leistungen der Grundsicherung im Alter und bei Erwerbsminderung. Ledigliche Menschen, die ihren Lebensmittelpunkt in
+            Leistungen der Grundsicherung im Alter und bei Erwerbsminderung. Lediglich Menschen, die ihren Lebensmittelpunkt in
             Deutschland haben, können Grundsicherung beziehen. <br> Weder ein fester Wohnsitz noch die deutsche
-            Staatsangehörigkeit sind Voraussetzung für den Bezug von Grundsicherung, sodass auch Menschen ohne Wohnung und mit nicht-deutscher Staatsangehörigkeit
-            einen Anspruch auf Grundsicherung haben.</span></span> erreicht haben</span>,
+            Staatsangehörigkeit sind Voraussetzung für den Bezug von Grundsicherung.</span></span> erreicht haben</span>,
         haben Anspruch auf Grundsicherung.</b>
-      Empfänger*innen der Grundsicherung bekommen jeden Monat Geld, wobei die <span class="text-hover">Höhe der Leistungen
+      Empfänger*innen der Grundsicherung bekommen jeden Monat finanzielle Unterstützung, wobei die <span class="text-hover">Höhe der Leistungen
         <span class="questionmark">?</span>
         <span class="tooltiptext">
           Die Höhe der Grundsicherung berechnet sich durch den gesetzlich definierten Regelbedarf des Bezugsberechtigten
@@ -66,12 +60,12 @@
         <br>
     </p>
     <p class="headline-04">
-      Neben der Senatsverwaltung für Integration, Arbeit und Soziales (SenIAS), sind in Berlin sind die bezirklichen Sozialämter
+      Neben der Senatsverwaltung für Integration, Arbeit und Soziales (SenIAS), sind in Berlin die bezirklichen Sozialämter
       für die Antragstellung und Bewilligung der Grundsicherung zuständig. Auf dem <a class="gsi-link" href="http://www.gsi-berlin.info"
         target="blank">GSI-Portal</a> stellt die Senatsverwaltung weitere differenzierte Daten zur Grundsicherung, sowie
       zu anderen sozialen Themen, als Open Data Datensätze bereit. In Zusammenarbeit mit der SenIAS hat die Open Data
       Informationsstelle (ODIS) diese Daten analysiert und visualisiert, um dieses Thema für alle Interessierten
-      verständlich darzustelle und wichtige Trends und Entwicklungen in diesem Bereich aufzuzeigen.
+      verständlich darzustellen und wichtige Trends und Entwicklungen in diesem Bereich aufzuzeigen.
       <br>
       <br>
       Weitere Informationen zur Datengrundlage dieser Visualisierungen befinden sich im letzten Abschnitt dieser Seite.
@@ -104,7 +98,7 @@
       beispielsweise Seniorenzentren mit kostenlosen Angeboten oder Zugang zu Lebensmittelspenden.
     <br>
     <br>
-    Bei der Betrachtung der Karte muss beachtet werden, dass es sich bei den angezeigten Werten um Prozentangaben handelt. Ein hoher Prozentsatz an grundsicherungsbeziehenden Personen in einem Gebiet bedeutet nicht zwangsläufig, dass auch eine vergleichsweise hohe absolute Anzahl an Empfänger*innen in diesem Gebiet ansässig sind. Dieser Hinweis gilt insbesondere für zu großen Teilen industriell genutzte oder bewaldete Gebiete (wie beispielsweise Westhafen oder Tegeler Forst).
+    Bei der Betrachtung der Karte muss beachtet werden, dass es sich bei den angezeigten Werten um Prozentangaben handelt. Ein hoher Prozentsatz an Grundsicherungsleistung beziehenden Personen in einem Gebiet bedeutet nicht zwangsläufig, dass auch eine vergleichsweise hohe absolute Anzahl an Empfänger*innen in diesem Gebiet ansässig sind. Dieser Hinweis gilt insbesondere für zu großen Teilen industriell genutzte oder bewaldete Gebiete (wie beispielsweise Westhafen oder Tegeler Forst).
     </p>
   </div>
 
@@ -141,12 +135,11 @@
   <div class="section pb-6" id="timeline-text">
     <h2 class='headline-02 pt-6 mb-1' style="margin-top: 2em;">Historische Entwicklung von 2006-2018</h2>
     <p class="headline-04">
-      Neben der räumlichen Verteilung ist es auch interessant, wie sich der Anteil von Empfänger*innen bzw. die Höhe der
-      Ausgaben für Grundsicherungsleistungen im Laufe der zurückliegenden Jahre entwickelt hat. Tatsächlich sind die
+      Neben der räumlichen Verteilung ist es ebenso interessant, wie sich der Anteil von Empfänger*innen Grundsicherungsleistungen im Laufe der zurückliegenden Jahre entwickelt hat. Tatsächlich sind die
       Anteile von Menschen, die Grundsicherung bei Erwerbsminderung oder Grundsicherung im Alter bekommen, seit 2006
       fast stetig gestiegen.
     </p>
-    <h3 style="margin-bottom: 20px;">Hovern Sie mit der Maus über das Diagramm, um die Daten anzeigen zu lassen.</h3>
+    <h3 style="margin-bottom: 20px;">Hovern Sie mit der Maus über das Diagramm, um sich die Daten anzeigen zu lassen.</h3>
   </div>
 
 
@@ -159,8 +152,8 @@
     <p class="headline-04 pb-6" style="margin-bottom: 2em;">
       Im Jahr 2008 haben 4,37% aller Menschen in Berlin ab 65 Jahren Grundsicherung bekommen. In 2018 waren es bereits
       5,9%. Die Zahlen für Empfänger*innen von Grundsicherung bei Erwerbsminderung haben sich im Vergleich nicht so
-      stark entwickelt, trotzdem ist auch hier eine Steigerung sichtbar: in 2006erhielten 0,89% aller Menschen in Berlin
-      zwischen 18 - 64 Jahren Grundsicherung. In 2018 waren es 1,3%.
+      stark entwickelt, trotzdem ist auch hier eine Steigerung sichtbar: am 31.12.2006 erhielten 0,89% aller Menschen in Berlin
+      zwischen 18 - 64 Jahren Grundsicherung. In 2018 waren es 1,34%.
     </p>
   </div>
 
@@ -171,16 +164,15 @@
         <div class="map-text">
           <!-- <h3 id="content-topic">Grundsicherung für Bevölkerung mit deutscher Staatsbürgerschaft</h3> -->
           <span class="headline-03" id="content-title">Entwicklung von 2006 - 2018</span>
-          <h3 style="margin-bottom: 1em; margin-top:2em">Bewegen Sie den Slider, um die Daten für die Jahre 2006 bis 2018 anzeigen zu lassen.</h3>
+          <h3 style="margin-bottom: 1em; margin-top:2em">Bewegen Sie den Slider, um sich die Daten für die Jahre 2006 bis 2018 anzeigen zu lassen.</h3>
           <div id="slider-wrapper slider-container">
             <input class="slider" id="slider" type="range" min="2006" max="2018" value="1" step="1" />
             <div id="year-label"></div>
           </div>
           <p style="margin-bottom: 10px;" class="headline-04" id="content-description">Auf dieser Karte werden die Empfänger*innen von
-            Grundsicherung im Alter (ab 65 Jahren) als Anteil (%) an der gesamten deutschen Bevölkerung auf Kiezebene
+            Grundsicherung im Alter (ab 65 Jahren) als Anteil (%) an der gleichaltrigen deutschen Bevölkerung auf Kiezebene
             (sogenannte Planungsräume der LORs - Lebensweltlich orientierten Räume) dargestellt.<br><br>
-            Für einige Planungsräume wurden in den Jahren 2006, 2007 und 2008 kein Daten erhoben.
-            Diese LOR sind entsprechend ausgegraut.</p>
+            </p>
         </div>
       </div>
 
@@ -223,7 +215,7 @@
       <br>
       <br>
       Der Quellcode der Visualisierung ist <a href="https://github.com/technologiestiftung/grundsicherung" target="blank">auf GitHub verfügbar.</a>
-      Wenn Sie Fragen zu dieser Seite  den Visualisierungen haben, bitte wenden Sie sich an <a href="mailto:odis@technologiestiftung-berlin.de">odis@technologiestiftung-berlin.de</a>.
+      Wenn Sie Fragen zu den Visualisierungen auf dieser Seite haben, wenden Sie sich bitte an <a href="mailto:odis@technologiestiftung-berlin.de">odis@technologiestiftung-berlin.de</a>.
       <br>
       <br>
     </p>
