small additional text changes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 
     <p class="headline-02" id="intro-text">
-      Berlinweit gibt es ca. 84.000 Menschen die staatliche Unterstützung in Form der Grundsicherung bekommen, um ihre
-      Lebensunterhalt zu sichern.
+      Berlinweit gibt es ca. 84.000 Menschen die staatliche Unterstützung in Form von Grundsicherung zur Sicherung ihres Lebensunterhalts bekommen.
     </p>
 
     <p class="headline-04">Die sogenannte “Grundsicherung im Alter und bei Erwerbsminderung gemäß dem 4. Kapital des
@@ -83,7 +82,7 @@
     </div>
     <div class="number-div">
       <h1>35,5 %</h1>
-      <p>der Ausgaben gemäß SGB XII sind Grundsicherung (2018)</p>
+      <p>der Ausgaben gemäß SGB XII sind Grundsicherungsleistungen (2018)</p>
     </div>
   </div>
   <div class="section pb-6">
