Button link added

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 </head>
 
 <body>
+  
   <a href="javascript:" class="scrollToTop">&#x2B06;</a>
+
+  <div class="section bl">
+    <a class="blog-link" href="http://odis-berlin.de/projekte/" target="_blank">Zurück zu den Projekten</a>
+  </div>
 
   <div class="section pb-6 pt-6" id="intro">
 
     <h1 id="title">Grundsicherung in Berlin</h1>
 
-
+  
     <p class="headline-02" id="intro-text">
       Berlinweit gibt es ca. 84.000 Menschen die staatliche Unterstützung in Form von Grundsicherung zur Sicherung ihres Lebensunterhalts bekommen.
     </p>
