first map year note added

--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
           </div>
         </div>
       </div>
-
       <div id="map"></div>
+    </div>
+    <div class="section pb-6">
+      <p class="headline-04"> Bezugsdatum: 31.12.2018</p>
     </div>
   </div>
 
